Fixed mobile optimisation gaps

--- a/css/style.css
+++ b/css/style.css
@@ -805,9 +805,9 @@ div.navbardiv {
 	div.chatbot-text {
 		width: 100%;
 		float: none;
-		padding-left: 0px;
-		padding-top: 5px;
-		padding-right: 0px;
+		padding-left: 0;
+		padding-top: 0;
+		padding-right: 0;
 		padding-bottom: 15px;
 	}
 	div.chatbot-text h2, p{
@@ -833,7 +833,7 @@ div.navbardiv {
 	}
 	div.taskmanagertext h2{
 		font-size: 14pt;
-		padding-top: 20px;
+		padding-top: 0px;
 		padding-bottom: 10px;
 		font-family: 'Montserrat', sans-serif;
 		line-height: 1.6em;
@@ -854,7 +854,7 @@ div.navbardiv {
 	div.websitetext h2{
 		font-size: 14pt;
 		padding-top: 20px;
-		padding-bottom: 10px;
+		padding-bottom: 0;
 		font-family: 'Montserrat', sans-serif;
 		line-height: 1.6em;
 		color: #ffffff;
